--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
 name = "rtrace"
 version = "0.1.0"
-authors = ["me <oreshnikov.ivan@gmail.com>"]
+authors = ["Ivan Oreshnikov <oreshnikov.ivan@gmail.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+sdl2 = "0.34.3"
